# resume-matcher

./: Cargo.toml  README.md  resume-lines.json  shell.nix
job_descriptions/: ExampleCorp-SoftwareDeveloper.txt
output/: ExampleCorp-SoftwareDeveloper-2025-05-27.typ
src/: dashboard.rs  graph_scoring.rs  main.rs  resume-lines.json  scoring.rs  scraper.rs  tfidf.rs  utils.rs
