[package]
name = "resume-matcher"
version = "0.1.0"
edition = "2021"
authors = ["Jackson Miller <jackson@civitas.ltd>"]
description = "AI-powered resume matcher that generates tailored resumes based on job descriptions"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# ML and NLP dependencies
rust-bert = "0.23.0"
tch = "0.17.0"
candle-core = "0.6.0"
candle-transformers = "0.6.0"
candle-nn = "0.6.0"

# TF-IDF implementation
# Note: You may need to implement this yourself or find an alternative crate
# For now, I'll include a simple implementation suggestion

# File I/O and utilities
tokio = { version = "1.0", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] } # Use 0.12.x for reqwest
scraper = "0.19.0" # Use 0.19.x for scraper
ratatui = { version = "0.27.0", features = ["all-widgets"] } # Use latest Ratatui
csv = "1.3"
crossterm = "0.27.0" # Required by Ratatui for terminal manipulation


# Development dependencies
[dev-dependencies]
tokio-test = "0.4"

# Build configuration
[build-dependencies]
# Add any build dependencies if needed

# Profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true